Flow: Front / Rear로 나눠 적용

--- a/client/src/layouts/TheView.scss
+++ b/client/src/layouts/TheView.scss
@@ -1,7 +1,5 @@
 .viewArea {
   width: $main-width;
   height: $main-height;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  float: left;
 }
